--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
@@ -5,9 +5,9 @@ import ${import};
 #end
 import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.commons.lang3.builder.ToStringStyle;
-import com.ruoyi.framework.aspectj.lang.annotation.Excel;
+import com.ruoyi.common.core.annotation.Excel;
 #if($table.crud)
-import com.ruoyi.framework.web.domain.BaseEntity;
+import com.ruoyi.common.core.web.domain.BaseEntity;
 #elseif($table.tree)
 import com.ruoyi.framework.web.domain.TreeEntity;
 #end
