修改树表代码生成模板

--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
@@ -9,7 +9,7 @@ import com.ruoyi.common.core.annotation.Excel;
 #if($table.crud)
 import com.ruoyi.common.core.web.domain.BaseEntity;
 #elseif($table.tree)
-import com.ruoyi.framework.web.domain.TreeEntity;
+import com.ruoyi.common.core.web.domain.TreeEntity;
 #end
 
 /**
