--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
@@ -6,7 +6,7 @@ import ${import};
 import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.apache.commons.lang3.builder.ToStringStyle;
 import com.ruoyi.common.core.annotation.Excel;
-#if($table.crud)
+#if($table.crud || $table.sub)
 import com.ruoyi.common.core.web.domain.BaseEntity;
 #elseif($table.tree)
 import com.ruoyi.common.core.web.domain.TreeEntity;
@@ -18,7 +18,7 @@ import com.ruoyi.common.core.web.domain.TreeEntity;
  * @author ${author}
  * @date ${datetime}
  */
-#if($table.crud)
+#if($table.crud || $table.sub)
 #set($Entity="BaseEntity")
 #elseif($table.tree)
 #set($Entity="TreeEntity")
@@ -50,6 +50,11 @@ public class ${ClassName} extends ${Entity}
 
 #end
 #end
+#if($table.sub)
+    /** $table.subTable.functionName信息 */
+    private List<${subClassName}> ${subclassName}List;
+
+#end
 #foreach ($column in $columns)
 #if(!$table.isSuperColumn($column.javaField))
 #if($column.javaField.length() > 2 && $column.javaField.substring(1,2).matches("[A-Z]"))
@@ -69,6 +74,18 @@ public class ${ClassName} extends ${Entity}
 #end
 #end
 
+#if($table.sub)
+    public List<${subClassName}> get${subClassName}List()
+    {
+        return ${subclassName}List;
+    }
+
+    public void set${subClassName}List(List<${subClassName}> ${subclassName}List)
+    {
+        this.${subclassName}List = ${subclassName}List;
+    }
+
+#end
     @Override
     public String toString() {
         return new ToStringBuilder(this,ToStringStyle.MULTI_LINE_STYLE)
@@ -79,6 +96,9 @@ public class ${ClassName} extends ${Entity}
 #set($AttrName=$column.javaField.substring(0,1).toUpperCase() + ${column.javaField.substring(1)})
 #end
             .append("${column.javaField}", get${AttrName}())
+#end
+#if($table.sub)
+            .append("${subclassName}List", get${subClassName}List())
 #end
             .toString();
     }
