--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/domain.java.vm
@@ -26,7 +26,7 @@ import com.ruoyi.common.core.web.domain.TreeEntity;
 #if($table.crud || $table.sub)
 #set($Entity="BaseEntity")
 #elseif($table.tree)
-#set($Entity="TreeEntity")
+#set($Entity="TreeEntity<${ClassName}>")
 #end
 @Data
 @EqualsAndHashCode(callSuper = true)
