--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/vo.java.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/vo.java.vm
@@ -7,21 +7,18 @@ import com.alibaba.excel.annotation.ExcelIgnoreUnannotated;
 import com.alibaba.excel.annotation.ExcelProperty;
 import com.ruoyi.common.excel.annotation.ExcelDictFormat;
 import com.ruoyi.common.excel.convert.ExcelDictConvert;
-import io.swagger.annotations.ApiModel;
-import io.swagger.annotations.ApiModelProperty;
 import lombok.Data;
 import java.util.Date;
 
 
 
 /**
- * ${functionName}视图对象 ${tableName}
+ * ${functionName}视图对象
  *
  * @author ${author}
  * @date ${datetime}
  */
 @Data
-@ApiModel("${functionName}视图对象")
 @ExcelIgnoreUnannotated
 public class ${ClassName}Vo {
 
@@ -47,7 +44,6 @@ public class ${ClassName}Vo {
 #else
     @ExcelProperty(value = "${comment}")
 #end
-    @ApiModelProperty("$column.columnComment")
     private $column.javaType $column.javaField;
 
 #end
