--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/bo.java.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/java/bo.java.vm
@@ -34,18 +34,18 @@ import com.ruoyi.common.core.web.domain.TreeEntity;
 public class ${ClassName}Bo extends ${Entity} {
 
 #foreach ($column in $columns)
-#if(!$table.isSuperColumn($column.javaField) && ($column.query == 1 || $column.isInsert == 1 || $column.isEdit == 1))
+#if(!$table.isSuperColumn($column.javaField) && ($column.query || $column.insert || $column.edit))
     /**
      * $column.columnComment
      */
-#if($column.isInsert == 1 && $column.isEdit == 1)
+#if($column.insert && $column.edit)
 #set($Group="AddGroup.class, EditGroup.class")
-#elseif($column.isInsert == 1)
+#elseif($column.insert)
 #set($Group="AddGroup.class")
-#elseif($column.isEdit == 1)
+#elseif($column.edit)
 #set($Group="EditGroup.class")
 #end
-#if($column.isRequired == 1)
+#if($column.required)
 #if($column.javaType == 'String')
     @NotBlank(message = "$column.columnComment不能为空", groups = { $Group })
 #else
