fix 修复 修复树模板父级编码变量错误

--- a/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/index-tree.vue.vm
+++ b/ruoyi-modules/ruoyi-gen/src/main/resources/vm/vue/index-tree.vue.vm
@@ -427,7 +427,7 @@ const handleAdd = (row?: ${BusinessName}VO) => {
     reset();
     getTreeselect();
     if (row != null && row.${treeCode}) {
-      form.value.${treeParentCode} = row.${treeCode};
+      form.value.${treeParentCode} = row.${treeParentCode};
     } else {
       form.value.${treeParentCode} = 0;
     }
